[package]
name = "nx-request-handler"
version = "0.1.0"
authors = ["techyCoder81"]
edition = "2021"
license-file = "LICENSE"
description = "A Rust crate for streamlining messaging between Skyline Plugins and WebSessions."
readme = "README.md"
repository = "https://github.com/techyCoder81/nx-request-handler"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[dependencies]
skyline = "0.2.1"
skyline-web = { git = "https://github.com/skyline-rs/skyline-web", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
smashnet = { git = "https://github.com/techyCoder81/smashnet.git" }
md5 = "0.7.0"
walkdir = "2"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

[features]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[build-dependencies]
prettify-js = "0.1.0"

